--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Application</string>
+    <string name="button_text">List to JSONArray</string>
+    <string name="create">Create</string>
 </resources>
